constraints/ns-routes-must-have-whitelist-annotation/samples/example_allowed.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: allowed-route
  annotations:
    haproxy.router.openshift.io/ip_whitelist: "192.168.1.10"
spec:
  to:
    kind: Service
    name: allowed-service
    weight: 100
  port:
    targetPort: web
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
